@@ -1,3 +1,6 @@
+2007-07-16  Yvan Vanhullebus  <vanhu@netasq.com>
+	* src/racoon/proposal.c: indentation
+	
 2007-06-07  Emmanuel Dreyfus <manu@netbsd.org>
 	From Paul Winder <Paul.Winder@tadpole.com>:
 	* src/racoon/isakmp_cfg.c: Fix ignored INTERNAL_DNS4_LIST
